--- a/index.html
+++ b/index.html
@@ -14,13 +14,25 @@
 </head>
 
 <body>
-    <section class="profile">
-        <header>
-            <img src="/assets/myself.jpg" alt="Foto de Raphael Zargos">
-            <p class="subtitle">Hello World! Meu nome é <span class="text-red">Raphael Zargos </span> e sou</p>
-            <h1 class="tittle-lg">Desenvolvedor Fullstack</h1>
-            <p class="text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e e ficazes para desafios complexos.</p>
-        </header>
+    <section id="intro">
+        <section id="info">
+            <header>
+                <img class="profile-pic" src="/assets/myself.jpg" alt="Foto de Raphael Zargos">
+                <p class="subtitle">Hello World! Meu nome é <span class="text-red">Raphael Zargos </span> e sou</p>
+                <h1 class="tittle-lg">Desenvolvedor Fullstack</h1>
+                <p class="text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e e ficazes para desafios complexos.</p>
+            </header>
+
+            <div id="logo">
+                <img id="LogoGit" src="/assets/GitHub.svg" alt="logo do Git"><p class="text-md">GitHub</p>
+                <img id="LogoHTML"src="/assets/HTML.svg" alt="logo do HTML"><p class="text-md">GitHub</p>
+                <img id="LogoCSS"src="/assets/CSS.svg" alt="logo do CSS"><p class="text-md">GitHub</p>
+                <img id="LogoJS"src="/assets/JavaScript.svg" alt="logo do JavaScript"><p class="text-md">GitHub</p>
+                <img id="LogoReact"src="/assets/React.svg" alt="logo do React"><p class="text-md">GitHub</p>
+                <img id="LogoNode"src="/assets/Node.js.svg" alt="logo do NodeJs"><p class="text-md">GitHub</p>
+            </div>
+
+        </section>
     </section>
 
     
