--- a/index.html
+++ b/index.html
@@ -59,6 +59,47 @@
 
         </section>
     </section>
+
+    <section id="projects">
+        <header>
+            <p class="text-red">Meu trabalho</p>
+            <h2>Veja os projetos em destaque</h2>
+        </header>
+
+        <div id="project-grid">
+            <div>
+                <img src="/assets/images/Thumbnail_Project-01.png" alt="imagem do projeto 1">
+                <h3>Travelgram</h3>
+                <p class="text-sm">Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+            </div>
+            <div>
+                <img src="/assets/images/Thumbnail_Project-02.png" alt="imagem do projeto 2">
+                <h3>Tech News</h3>
+                <p class="text-sm">Homepage de um portal de notícias sobre a área de tecnologia</p>
+            </div>
+            <div>
+                <img src="/assets/images/Thumbnail_Project-03.png" alt="imagem do projeto 3">
+                <h3>Página de receita</h3>
+                <p class="text-sm">Página com o passo a passo de uma receita para cupcakes</p>
+            </div>
+            <div>
+                <img src="/assets/images/Thumbnail_Project-04.png" alt="imagem do projeto 4">
+                <h3>Zingen</h3>
+                <p class="text-sm">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+            </div>
+            <div>
+                <img src="/assets/images/Thumbnail_Project-05.png" alt="imagem do projeto 5">
+                <h3>Refund</h3>
+                <p class="text-sm">Um sistema para pedido e acompanhamento de reembolso </p>
+            </div>
+            <div>
+                <img src="/assets/images/Thumbnail_Project-06.png" alt="imagem do projeto 6">
+                <h3>Página de turismo</h3>
+                <p class="text-sm">Página com as principais informações para quem quer viajar para Busan</p>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
