finalizando section services

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2>Veja os projetos em destaque</h2>
         </header>
 
-        <div id="project-grid">
+        <div id="project-grid" class="grid gap-24 grid-3-col">
             <div>
                 <img src="/assets/images/Thumbnail_Project-01.png" alt="imagem do projeto 1">
                 <h3>Travelgram</h3>
@@ -99,6 +99,31 @@
             </div>
         </div>
 
+    </section>
+
+    <section id="services">
+        <header>
+            <p class="text-red">Meus serviços</p>
+            <h2>Como posso ajudar o seu negócio</h2>
+        </header>
+
+        <div id="services-grid" class="grid gap-24 grid-3-col">
+            <div>
+                <img src="/assets/logo/Devices.png" alt="logo de devices">
+                <h3>Websites e Aplicativos</h3>
+                <p class="text-sm">Desenvolvimento de interfaces</p>
+            </div>
+            <div>
+                <img src="/assets/logo/HardDrives.png" alt="logo de HardDrives">
+                <h3>API e banco de dados</h3>
+                <p class="text-sm">Criação de serviços do sistema</p>
+            </div>
+            <div>
+                <img src="/assets/logo/Infinity.png" alt="logo do infinito">
+                <h3>DevOps </h3>
+                <p class="text-sm">Gestão e infraestrutura da aplicação</p>
+            </div>
+        </div>
     </section>
 </body>
 
