finalizando seção contatos, e finalizando o projeto

--- a/index.html
+++ b/index.html
@@ -125,6 +125,38 @@
             </div>
         </div>
     </section>
+ 
+    <section id="contact">
+        <header>
+            <p class="text-purple">Contato</p>
+            <h2>Gostou do meu trabalho?</h2>
+            <p class="text-md">Entre em contato ou acompanhe as minhas redes sociais!</p>
+        </header>
+
+        <div id="links-grid" class="grid grid-4-row gap-16">
+            <div>
+                <img src="/assets/logo/LinkedinLogo.png" alt="logo linkedin">
+                <p class="text-md">Linkedin</p>
+                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+            </div>
+            <div>
+                <img src="/assets/logo/InstagramLogo.png" alt="logo instagram">
+                <p class="text-md">Instagram</p>
+                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+            </div>
+            <div>
+                <img src="/assets/logo/GithubLogo.png" alt="logo github">
+                <p class="text-md">GitHub</p>
+                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+            </div>
+            <div>
+                <img src="/assets/logo/EnvelopeSimple.png" alt="logo caixa de email">
+                <p class="text-md">E-mail</p>
+                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
