implementação de um README e de targets na aba de contatos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <p class="subtitle">Hello World! Meu nome é <span class="text-red">Raphael Zargos</span> e sou</p>
             <h1>Desenvolvedor Fullstack</h1>
             <p class="text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas
-                através da <br>minha paixão pela tecnologia, contribuindo com soluções inovadoras e e ficazes para desafios
+                através da <br>minha paixão pela tecnologia, contribuindo com soluções inovadoras e e ficazes para
+                desafios
                 complexos.</p>
 
             <div id="logos">
@@ -125,7 +126,7 @@
             </div>
         </div>
     </section>
- 
+
     <section id="contact">
         <header>
             <p class="text-purple">Contato</p>
@@ -134,26 +135,34 @@
         </header>
 
         <div id="links-grid" class="grid grid-4-row gap-16">
-            <div>
-                <img src="/assets/logo/LinkedinLogo.png" alt="logo linkedin">
-                <p class="text-md">Linkedin</p>
-                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
-            </div>
-            <div>
-                <img src="/assets/logo/InstagramLogo.png" alt="logo instagram">
-                <p class="text-md">Instagram</p>
-                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
-            </div>
-            <div>
-                <img src="/assets/logo/GithubLogo.png" alt="logo github">
-                <p class="text-md">GitHub</p>
-                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
-            </div>
-            <div>
-                <img src="/assets/logo/EnvelopeSimple.png" alt="logo caixa de email">
-                <p class="text-md">E-mail</p>
-                <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
-            </div>
+            <a href="https://www.linkedin.com/in/zargos/" target="_blank">
+                <div>
+                    <img src="/assets/logo/LinkedinLogo.png" alt="logo linkedin">
+                    <p class="text-md">Linkedin</p>
+                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/raphaelzmpd/" target="_blank">
+                <div>
+                    <img src="/assets/logo/InstagramLogo.png" alt="logo instagram">
+                    <p class="text-md">Instagram</p>
+                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                </div>
+            </a>
+            <a href="https://github.com/rzargos" target="_blank">
+                <div>
+                    <img src="/assets/logo/GithubLogo.png" alt="logo github">
+                    <p class="text-md">GitHub</p>
+                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                </div>
+            </a>
+            <a href="/email.html" target="_blank">
+                <div>
+                    <img src="/assets/logo/EnvelopeSimple.png" alt="logo caixa de email">
+                    <p class="text-md">E-mail</p>
+                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                </div>
+            </a>
         </div>
     </section>
 
