--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Portfólio Dev</title>
 
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@700&family=Inconsolata&family=Maven+Pro&display=swap"
         rel="stylesheet">
 </head>
@@ -18,8 +18,8 @@
 <body>
     <section id="intro">
         <section id="info">
-            <img class="profile-pic" src="/assets/images/myself.jpg" alt="foto de Raphael Zargos">
-            <img class="code-logo" src="/assets/logo/Code.png" alt="ícone de código">
+            <img class="profile-pic" src="./assets/images/myself.jpg" alt="foto de Raphael Zargos">
+            <img class="code-logo" src="./assets/logo/Code.png" alt="ícone de código">
             <p class="subtitle">Hello World! Meu nome é <span class="text-red">Raphael Zargos</span> e sou</p>
             <h1>Desenvolvedor Fullstack</h1>
             <p class="text-sm">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas
@@ -29,33 +29,33 @@
 
             <div id="logos">
                 <figure>
-                    <img src="/assets/logo/GitHub.svg" alt="logo GitHub">
+                    <img src="./assets/logo/GitHub.svg" alt="logo GitHub">
                     <p class="text-md">GitHub</p>
                 </figure>
                 <figure>
-                    <img src="/assets/logo/HTML.svg" alt="logo HTML">
+                    <img src="./assets/logo/HTML.svg" alt="logo HTML">
                     <p class="text-md">HTML</p>
                 </figure>
                 <figure>
-                    <img src="/assets/logo/CSS.svg" alt="logo GitHub">
+                    <img src="./assets/logo/CSS.svg" alt="logo GitHub">
                     <p class="text-md">CSS</p>
                 </figure>
                 <figure>
-                    <img src="/assets/logo/JavaScript.svg" alt="logo GitHub">
+                    <img src="./assets/logo/JavaScript.svg" alt="logo GitHub">
                     <p class="text-md">Javascript</p>
                 </figure>
                 <figure>
-                    <img src="/assets/logo/React.svg" alt="logo GitHub">
+                    <img src="./assets/logo/React.svg" alt="logo GitHub">
                     <p class="text-md">React</p>
                 </figure>
                 <figure>
-                    <img src="/assets/logo/Node.js.svg" alt="logo GitHub">
+                    <img src="./assets/logo/Node.js.svg" alt="logo GitHub">
                     <p class="text-md">Node.js</p>
                 </figure>
             </div>
 
             <footer>
-                <img src="/assets/logo/CaretDoubleDown.png" alt="setas para baixo">
+                <img src="./assets/logo/CaretDoubleDown.png" alt="setas para baixo">
             </footer>
 
         </section>
@@ -69,32 +69,32 @@
 
         <div id="project-grid" class="grid gap-24 grid-3-col">
             <div>
-                <img src="/assets/images/Thumbnail_Project-01.png" alt="imagem do projeto 1">
+                <img src="./assets/images/Thumbnail_Project-01.png" alt="imagem do projeto 1">
                 <h3>Travelgram</h3>
                 <p class="text-sm">Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
             </div>
             <div>
-                <img src="/assets/images/Thumbnail_Project-02.png" alt="imagem do projeto 2">
+                <img src="./assets/images/Thumbnail_Project-02.png" alt="imagem do projeto 2">
                 <h3>Tech News</h3>
                 <p class="text-sm">Homepage de um portal de notícias sobre a área de tecnologia</p>
             </div>
             <div>
-                <img src="/assets/images/Thumbnail_Project-03.png" alt="imagem do projeto 3">
+                <img src="./assets/images/Thumbnail_Project-03.png" alt="imagem do projeto 3">
                 <h3>Página de receita</h3>
                 <p class="text-sm">Página com o passo a passo de uma receita para cupcakes</p>
             </div>
             <div>
-                <img src="/assets/images/Thumbnail_Project-04.png" alt="imagem do projeto 4">
+                <img src="./assets/images/Thumbnail_Project-04.png" alt="imagem do projeto 4">
                 <h3>Zingen</h3>
                 <p class="text-sm">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
             </div>
             <div>
-                <img src="/assets/images/Thumbnail_Project-05.png" alt="imagem do projeto 5">
+                <img src="./assets/images/Thumbnail_Project-05.png" alt="imagem do projeto 5">
                 <h3>Refund</h3>
                 <p class="text-sm">Um sistema para pedido e acompanhamento de reembolso </p>
             </div>
             <div>
-                <img src="/assets/images/Thumbnail_Project-06.png" alt="imagem do projeto 6">
+                <img src="./assets/images/Thumbnail_Project-06.png" alt="imagem do projeto 6">
                 <h3>Página de turismo</h3>
                 <p class="text-sm">Página com as principais informações para quem quer viajar para Busan</p>
             </div>
@@ -110,17 +110,17 @@
 
         <div id="services-grid" class="grid gap-24 grid-3-col">
             <div>
-                <img src="/assets/logo/Devices.png" alt="logo de devices">
+                <img src="./assets/logo/Devices.png" alt="logo de devices">
                 <h3>Websites e Aplicativos</h3>
                 <p class="text-sm">Desenvolvimento de interfaces</p>
             </div>
             <div>
-                <img src="/assets/logo/HardDrives.png" alt="logo de HardDrives">
+                <img src="./assets/logo/HardDrives.png" alt="logo de HardDrives">
                 <h3>API e banco de dados</h3>
                 <p class="text-sm">Criação de serviços do sistema</p>
             </div>
             <div>
-                <img src="/assets/logo/Infinity.png" alt="logo do infinito">
+                <img src="./assets/logo/Infinity.png" alt="logo do infinito">
                 <h3>DevOps </h3>
                 <p class="text-sm">Gestão e infraestrutura da aplicação</p>
             </div>
@@ -137,30 +137,30 @@
         <div id="links-grid" class="grid grid-4-row gap-16">
             <a href="https://www.linkedin.com/in/zargos/" target="_blank">
                 <div>
-                    <img src="/assets/logo/LinkedinLogo.png" alt="logo linkedin">
+                    <img src="./assets/logo/LinkedinLogo.png" alt="logo linkedin">
                     <p class="text-md">Linkedin</p>
-                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                    <img src="./assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
                 </div>
             </a>
             <a href="https://www.instagram.com/raphaelzmpd/" target="_blank">
                 <div>
-                    <img src="/assets/logo/InstagramLogo.png" alt="logo instagram">
+                    <img src="./assets/logo/InstagramLogo.png" alt="logo instagram">
                     <p class="text-md">Instagram</p>
-                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                    <img src="./assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
                 </div>
             </a>
             <a href="https://github.com/rzargos" target="_blank">
                 <div>
-                    <img src="/assets/logo/GithubLogo.png" alt="logo github">
+                    <img src="./assets/logo/GithubLogo.png" alt="logo github">
                     <p class="text-md">GitHub</p>
-                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                    <img src="./assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
                 </div>
             </a>
             <a href="/email.html" target="_blank">
                 <div>
-                    <img src="/assets/logo/EnvelopeSimple.png" alt="logo caixa de email">
+                    <img src="./assets/logo/EnvelopeSimple.png" alt="logo caixa de email">
                     <p class="text-md">E-mail</p>
-                    <img src="/assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
+                    <img src="./assets/logo/ArrowUpRight.png" alt="seta para diagonal direita">
                 </div>
             </a>
         </div>
